# Sourcery

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  run.sh  vercel.json
.github/workflows/: ci.yml
api/: providers.py  run.py
app/: globals.css  layout.tsx  page.tsx
app/providers/: page.tsx
components/: EvidenceList.tsx  PipelineProgress.tsx  ProviderPicker.tsx  QueryForm.tsx  SupplierCard.tsx  ThemeToggle.tsx
components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
docs/: decision_log.md  entity_resolution.md  failure_modes.md  source_strategy.md  tools_stack.md  verification_logic.md
lib/: api.ts
scripts/: dev_server.py  smoke.py
tests/: test_candidates.py  test_confidence.py  test_judge.py  test_parser.py  test_pipeline.py  test_resolve.py  test_verify.py
vss/: candidates.py  cli.py  confidence.py  judge.py  models.py  normalize.py  parser.py  pipeline.py  plan.py  resolve.py  semantics.py  settings.py  verify.py
vss/llm/: __init__.py  anthropic_.py  bedrock.py  gemini.py  groq_.py  ollama_.py  openai_.py  stub.py
vss/sources/: __init__.py  brave.py  common.py  gleif.py  iaf_certsearch.py  moea_taiwan.py  ops_reality.py  sanctions.py  twse.py  web.py  website.py
