[project]
name = "sourcery-tool"
version = "0.1.0"
description = "Verified Supplier Search Tool"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "httpx[http2]>=0.27",
    "typer>=0.13",
    "rapidfuzz>=3.10",
    "cleanco>=2.2",
    "pypinyin>=0.53",
    "unidecode>=1.3",
    "tldextract>=5.1",
    "pycountry>=24.6",
    "trafilatura>=1.12",
    "python-dotenv>=1.0",
    "ddgs>=6.3",
    "tenacity>=9.0",
]

[project.optional-dependencies]
anthropic = ["anthropic[bedrock]>=0.40"]
bedrock = ["boto3>=1.35"]
gemini = ["google-genai>=0.5"]
groq = ["groq>=0.13"]
ollama = ["ollama>=0.4"]
openai = ["openai>=1.50"]
all-llms = [
    "anthropic[bedrock]>=0.40",
    "boto3>=1.35",
    "openai>=1.50",
    "google-genai>=0.5",
    "groq>=0.13",
    "ollama>=0.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pre-commit>=3",
]

[project.scripts]
sourcery = "vss.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vss"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ARG", "B", "E", "F", "I", "RUF", "SIM", "UP"]
ignore = ["E501", "RUF001"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
